--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇸🇬 新加坡-1.17MB/s(Youtube:不良林), server: 8.214.33.158, port: 80, type: vmess, uuid: cb81e6ab-1d83-4ac1-f0ad-ae5c2a7c29ef, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 8.214.33.158}}
-  - {name: 🇨🇦 加拿大-557.2KB/s(Youtube:不良林), server: 134.195.198.95, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
-  - {name: 🇨🇦 加拿大-340.5KB/s(Youtube:不良林), server: 134.195.198.95, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
-  - {name: 🇺🇸 美国-764.3KB/s(Youtube:不良林), server: 38.68.134.191, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇺🇸 美国-423.3KB/s(Youtube:不良林), server: 38.68.134.191, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
-  - {name: 🇨🇦 加拿大-460.2KB/s(Youtube:不良林), server: 134.195.198.95, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇨🇦 加拿大-501.0KB/s(Youtube:不良林), server: 134.195.198.95, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
-  - {name: 🇺🇸 美国-969.9KB/s(Youtube:不良林), server: us-am32-5.eqnode.net, port: 8081, type: ssr, cipher: aes-256-cfb, password: YFVrXZgRo, protocol: origin, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
-  - {name: 🇺🇸 美国-1.12MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-1.19MB/s(Youtube:不良林), server: 134.195.198.95, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
+  - {name: 🇨🇦 加拿大-710.7KB/s(Youtube:不良林), server: 196.247.59.154, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-608.7KB/s(Youtube:不良林), server: 134.195.198.95, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
   - {name: 🇨🇦 加拿大-797.7KB/s(Youtube:不良林), server: 38.111.114.246, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇨🇦 加拿大-252.0KB/s(Youtube:不良林), server: 134.195.198.95, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
+  - {name: 🇺🇸 美国-971.8KB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.13MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-478.3KB/s(Youtube:不良林), server: 38.68.134.191, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
+  - {name: 🇬🇧 英国-2.82MB/s(Youtube:不良林), server: 146.70.46.68, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: 146.70.46.68}}
+  - {name: 🇸🇬 新加坡-933.4KB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-1.17MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-557.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-340.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-764.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-423.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-460.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-501.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-969.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.19MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-710.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-608.7KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-797.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-252.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-971.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-478.3KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.82MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-933.4KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇸🇬 新加坡-1.17MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-557.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-340.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-764.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-423.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-460.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-501.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-969.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.19MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-710.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-608.7KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-797.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-252.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-971.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-478.3KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.82MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-933.4KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-1.17MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-557.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-340.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-764.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-423.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-460.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-501.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-969.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.19MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-710.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-608.7KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-797.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-252.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-971.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-478.3KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.82MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-933.4KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇸🇬 新加坡-1.17MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-557.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-340.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-764.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-423.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-460.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-501.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-969.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.19MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-710.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-608.7KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-797.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-252.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-971.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-478.3KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.82MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-933.4KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-1.17MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-557.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-340.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-764.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-423.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-460.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-501.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-969.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.19MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-710.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-608.7KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-797.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-252.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-971.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-478.3KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.82MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-933.4KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-1.17MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-557.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-340.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-764.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-423.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-460.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-501.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-969.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.19MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-710.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-608.7KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-797.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-252.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-971.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-478.3KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.82MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-933.4KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-1.17MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-557.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-340.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-764.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-423.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-460.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-501.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-969.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.19MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-710.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-608.7KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-797.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-252.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-971.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-478.3KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.82MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-933.4KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
