--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇦 加拿大-1.19MB/s(Youtube:不良林), server: 134.195.198.95, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
-  - {name: 🇨🇦 加拿大-710.7KB/s(Youtube:不良林), server: 196.247.59.154, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇦 加拿大-608.7KB/s(Youtube:不良林), server: 134.195.198.95, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
-  - {name: 🇨🇦 加拿大-797.7KB/s(Youtube:不良林), server: 38.111.114.246, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
-  - {name: 🇨🇦 加拿大-252.0KB/s(Youtube:不良林), server: 134.195.198.95, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
-  - {name: 🇺🇸 美国-971.8KB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.13MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-569.5KB/s(Youtube:不良林), server: trojan-daozhu-uallen-qbit-azure-hk.kinhproxy.com, port: 443, type: trojan, password: trojan-daozhu-uallen-qbit-azure-hk, sni: trojan-daozhu-uallen-qbit-azure-hk.kinhproxy.com, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-1.91MB/s(Youtube:不良林), server: 134.195.198.95, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
+  - {name: 🇨🇦 加拿大-354.8KB/s(Youtube:不良林), server: 196.247.59.154, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-3.10MB/s(Youtube:不良林), server: liantong.latiao.cyou, port: 26807, type: ss, cipher: chacha20-ietf-poly1305, password: 1ce78957-a1be-4c34-9169-74b90bc533e9}
+  - {name: 🇨🇦 加拿大-1.04MB/s(Youtube:不良林), server: 134.195.198.95, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
   - {name: 🇺🇸 美国-478.3KB/s(Youtube:不良林), server: 38.68.134.191, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
   - {name: 🇬🇧 英国-2.82MB/s(Youtube:不良林), server: 146.70.46.68, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: 146.70.46.68}}
   - {name: 🇸🇬 新加坡-933.4KB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-1.47MB/s(Youtube:不良林), server: 134.195.198.95, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇰🇷 韩国-2.07MB/s(Youtube:不良林), server: 146.56.110.129, port: 53702, type: vmess, uuid: d0ee8ec0-ef63-41aa-9087-11edf7a978b9, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.19MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-710.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-608.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-797.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-252.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-971.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-569.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-354.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.10MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.04MB/s(Youtube:不良林)
       - 🇺🇸 美国-478.3KB/s(Youtube:不良林)
       - 🇬🇧 英国-2.82MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-933.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.47MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.07MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇦 加拿大-1.19MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-710.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-608.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-797.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-252.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-971.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-569.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-354.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.10MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.04MB/s(Youtube:不良林)
       - 🇺🇸 美国-478.3KB/s(Youtube:不良林)
       - 🇬🇧 英国-2.82MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-933.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.47MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.07MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.19MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-710.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-608.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-797.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-252.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-971.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-569.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-354.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.10MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.04MB/s(Youtube:不良林)
       - 🇺🇸 美国-478.3KB/s(Youtube:不良林)
       - 🇬🇧 英国-2.82MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-933.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.47MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.07MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇦 加拿大-1.19MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-710.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-608.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-797.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-252.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-971.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-569.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-354.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.10MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.04MB/s(Youtube:不良林)
       - 🇺🇸 美国-478.3KB/s(Youtube:不良林)
       - 🇬🇧 英国-2.82MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-933.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.47MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.07MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.19MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-710.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-608.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-797.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-252.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-971.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-569.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-354.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.10MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.04MB/s(Youtube:不良林)
       - 🇺🇸 美国-478.3KB/s(Youtube:不良林)
       - 🇬🇧 英国-2.82MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-933.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.47MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.07MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-1.19MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-710.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-608.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-797.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-252.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-971.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-569.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-354.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.10MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.04MB/s(Youtube:不良林)
       - 🇺🇸 美国-478.3KB/s(Youtube:不良林)
       - 🇬🇧 英国-2.82MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-933.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.47MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.07MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-1.19MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-710.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-608.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-797.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-252.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-971.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-569.5KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-354.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.10MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.04MB/s(Youtube:不良林)
       - 🇺🇸 美国-478.3KB/s(Youtube:不良林)
       - 🇬🇧 英国-2.82MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-933.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.47MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.07MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
