--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-843.3KB/s(Youtube:不良林), server: 38.68.134.191, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇨🇦 加拿大-719.3KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇰🇷 韩国-2.07MB/s(Youtube:不良林), server: 146.56.110.129, port: 53702, type: vmess, uuid: d0ee8ec0-ef63-41aa-9087-11edf7a978b9, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.84MB/s(Youtube:不良林), server: liantong.latiao.cyou, port: 26809, type: ss, cipher: chacha20-ietf-poly1305, password: 1ce78957-a1be-4c34-9169-74b90bc533e9}
-  - {name: 🇨🇳 中国-4.71MB/s(Youtube:不良林), server: yidong.latiao.cyou, port: 26801, type: ss, cipher: chacha20-ietf-poly1305, password: 1ce78957-a1be-4c34-9169-74b90bc533e9}
-  - {name: 🇨🇳 中国-582.8KB/s(Youtube:不良林), server: liantong.latiao.cyou, port: 26802, type: ss, cipher: chacha20-ietf-poly1305, password: 1ce78957-a1be-4c34-9169-74b90bc533e9}
-  - {name: 🇯🇵 日本-314.5KB/s(Youtube:不良林), server: jp01-vm0.entry.rwesdhytjuftyhdafsdgfrh.club, port: 444, type: vmess, uuid: 0d5e36a4-e3ae-3728-a741-13e614c47d1f, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: jp01-vm0.entry.rwesdhytjuftyhdafsdgfrh.club}}
-  - {name: 🇯🇵 日本-4.31MB/s(Youtube:不良林), server: jp05-vm5.entry.sdjighbiuodrfhgiuo.beauty, port: 665, type: vmess, uuid: aad9e402-3da8-3ded-8646-94268b81787a, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: jp05-vm5.entry.sdjighbiuodrfhgiuo.beauty}}
-  - {name: 🇯🇵 日本-772.2KB/s(Youtube:不良林), server: jp05-vm5.entry.sdjighbiuodrfhgiuo.beauty, port: 665, type: vmess, uuid: 23476fb3-9fa9-3fab-9989-4f9c443ae92b, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: jp05-vm5.entry.sdjighbiuodrfhgiuo.beauty}}
-  - {name: 🇺🇸 美国-1.06MB/s(Youtube:不良林), server: 38.68.134.191, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇨🇳 中国-322.2KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65091, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
+  - {name: 🇨🇦 加拿大-460.2KB/s(Youtube:不良林), server: 134.195.198.95, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇺🇸 美国-1.82MB/s(Youtube:不良林), server: 38.68.134.191, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇨🇳 中国-5.16MB/s(Youtube:不良林), server: liantong.latiao.cyou, port: 26808, type: ss, cipher: chacha20-ietf-poly1305, password: 1ce78957-a1be-4c34-9169-74b90bc533e9}
+  - {name: 🇨🇳 中国-3.05MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇩🇪 德国-2.76MB/s(Youtube:不良林), server: 193.108.118.30, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇬🇧 英国-2.21MB/s(Youtube:不良林), server: 144.24.88.101, port: 16833, type: vmess, uuid: f5425ccf-3946-4fb4-eb24-5393d78a392f, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-313.7KB/s(Youtube:不良林), server: jp06-vm5.entry.sdjighbiuodrfhgiuo.beauty, port: 668, type: vmess, uuid: aad9e402-3da8-3ded-8646-94268b81787a, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: jp06-vm5.entry.sdjighbiuodrfhgiuo.beauty}}
+  - {name: 🇯🇵 日本-441.4KB/s(Youtube:不良林), server: jp06-vm0.entry.rwesdhytjuftyhdafsdgfrh.club, port: 447, type: vmess, uuid: b7313b70-522e-36db-ae54-2dbf87f26fa9, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: jp06-vm0.entry.rwesdhytjuftyhdafsdgfrh.club}}
+  - {name: 🇺🇸 美国-504.0KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20711, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-843.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-719.3KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.84MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-582.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-314.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.31MB/s(Youtube:不良林)
-      - 🇯🇵 日本-772.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-322.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-460.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.82MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.05MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.76MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.21MB/s(Youtube:不良林)
+      - 🇯🇵 日本-313.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-441.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-504.0KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-843.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-719.3KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.84MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-582.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-314.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.31MB/s(Youtube:不良林)
-      - 🇯🇵 日本-772.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-322.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-460.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.82MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.05MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.76MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.21MB/s(Youtube:不良林)
+      - 🇯🇵 日本-313.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-441.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-504.0KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-843.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-719.3KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.84MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-582.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-314.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.31MB/s(Youtube:不良林)
-      - 🇯🇵 日本-772.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-322.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-460.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.82MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.05MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.76MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.21MB/s(Youtube:不良林)
+      - 🇯🇵 日本-313.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-441.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-504.0KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-843.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-719.3KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.84MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-582.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-314.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.31MB/s(Youtube:不良林)
-      - 🇯🇵 日本-772.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-322.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-460.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.82MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.05MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.76MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.21MB/s(Youtube:不良林)
+      - 🇯🇵 日本-313.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-441.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-504.0KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-843.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-719.3KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.84MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-582.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-314.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.31MB/s(Youtube:不良林)
-      - 🇯🇵 日本-772.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-322.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-460.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.82MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.05MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.76MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.21MB/s(Youtube:不良林)
+      - 🇯🇵 日本-313.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-441.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-504.0KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-843.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-719.3KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.84MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-582.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-314.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.31MB/s(Youtube:不良林)
-      - 🇯🇵 日本-772.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-322.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-460.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.82MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.05MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.76MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.21MB/s(Youtube:不良林)
+      - 🇯🇵 日本-313.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-441.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-504.0KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-843.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-719.3KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.84MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-582.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-314.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.31MB/s(Youtube:不良林)
-      - 🇯🇵 日本-772.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-322.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-460.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.82MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.05MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.76MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.21MB/s(Youtube:不良林)
+      - 🇯🇵 日本-313.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-441.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-504.0KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
